update shop and checkout

--- a/FAQs.html
+++ b/FAQs.html
@@ -47,7 +47,7 @@
                 <h1 class="header">FAQs</h1>
             <div class="faqOne">
                 <!-- question1 -->
-                <h1 class="faqPage" style="font-family:Calibri, Verdana, sans-serif; font-size: medium;">What days and times do you offer grooming?</h1>
+                <h1 class="faqPage" style="font-family:Playfair Display; font-size: medium;">What days and times do you offer grooming?</h1>
                 <!-- answer1 -->
                 <div class="faqBody">
                     <p>
@@ -59,7 +59,7 @@
             <hr class="lineDivider">
             <div class="faqTwo">
                 <!-- question2 -->
-                <h1 class="faqPage" style="font-family:Calibri, Verdana, sans-serif; font-size: medium;">How much does it cost?</h1>
+                <h1 class="faqPage" style="font-family:Playfair Display; font-size: medium;">How much does it cost?</h1>
                 <!-- answer2 -->
                 <div class="faqBody">
                     <p>
@@ -71,7 +71,7 @@
             <hr class="lineDivider">
             <div class="faqThree">
                 <!-- question3 -->
-                <h1 class="faqPage" style="font-family:Calibri, Verdana, sans-serif; font-size: medium;">How long does it usually take?</h1>
+                <h1 class="faqPage" style="font-family:Playfair Display; font-size: medium;">How long does it usually take?</h1>
                 <!-- answer3 -->
                 <div class="faqBody">
                     <p>
@@ -85,7 +85,7 @@
             <hr class="lineDivider">
             <div class="faqFour">
                 <!-- question4 -->
-                <h1 class="faqPage" style="font-family:Calibri, Verdana, sans-serif; font-size: medium;">What if I cannot pick up my pet as soon as the appointment is over?</h1>
+                <h1 class="faqPage" style="font-family:Playfair Display; font-size: medium;">What if I cannot pick up my pet as soon as the appointment is over?</h1>
                 <!-- answer4 -->
                 <div class="faqBody">
                     <p>
@@ -96,7 +96,7 @@
             <hr class="lineDivider">
             <div class="faqFive">
                 <!-- question4 -->
-                <h1 class="faqPage" style="font-family:Calibri, Verdana, sans-serif; font-size: medium;">What do I need to prepare before the grooming appointment?</h1>
+                <h1 class="faqPage" style="font-family:Playfair Display; font-size: medium;">What do I need to prepare before the grooming appointment?</h1>
                 <!-- answer4 -->
                 <div class="faqBody">
                     <p>
@@ -108,7 +108,7 @@
             <hr class="lineDivider">
             <div class="faqSix">
                 <!-- question4 -->
-                <h1 class="faqPage" style="font-family:Calibri, Verdana, sans-serif; font-size: medium;">Can I bring my own shampoo?</h1>
+                <h1 class="faqPage" style="font-family:Playfair Display; font-size: medium;">Can I bring my own shampoo?</h1>
                 <!-- answer4 -->
                 <div class="faqBody">
                     <p>
