--- a/booking.html
+++ b/booking.html
@@ -44,7 +44,7 @@
     <div class="centerContainer">
         <div class="whiteBg card">
             <h1 class="header">Book an Appointment</h1>
-            <div style="font-family:Calibri, Verdana, sans-serif">
+            <div style="font-family:Playfair Display">
                 <label for="apptName" class="apptTextInput">Enter your name:</label>
                 <input type="text" id="apptName" class="apptInput"><br>
 
