--- a/index.html
+++ b/index.html
@@ -60,17 +60,19 @@
     <div>
       <img src="./Images/Fluff&Buff.png" alt="Background Image" id="bgImage">
       <div id="landingTopContent">
-        <h1 id="topTitle">Fluff & Buff</h1>
-        <p>
-          Fluff & Buff specialises in pet grooming services. We also sell high quality grooming products and fun pet
-          toys.
-          Focusing on maintaining a safe and pet-friendly environment we assure all pet parents that their fur babies
-          are well taken care of.
-        </p>
-        <p id="topPic">
-          <lottie-player src="https://assets5.lottiefiles.com/packages/lf20_itqodaed.json" background="transparent"
-            speed="1" style="width: 200px; height: 200px;" loop autoplay></lottie-player>
-        </p>
+        <div>
+          <h1 id="topTitle">Fluff & Buff</h1>
+          <p>
+            Fluff & Buff specialises in pet grooming services. We also sell high quality grooming products and fun pet
+            toys.
+            Focusing on maintaining a safe and pet-friendly environment we assure all pet parents that their fur babies
+            are well taken care of.
+          </p>
+          <p id="topPic">
+            <lottie-player src="https://assets5.lottiefiles.com/packages/lf20_itqodaed.json" background="transparent"
+              speed="1" style="width: 200px; height: 200px;" loop autoplay></lottie-player>
+          </p>
+        </div>
       </div>
     </div>
   </div>
@@ -123,7 +125,7 @@
           <p class="reviewStars">
             ★★★★★
           </p>
-          <p class="reviewText" style="font-family:Calibri, Verdana, sans-serif">
+          <p class="reviewText" style="font-family: Playfair Display">
           My experience at Fluff & Buff was extremely positive 😊 The grooming of my poodle was just as I had wanted.
           The staff were friendly and professional. Love the care and attention my poodle was given. I would highly
           recommend their service to others.
@@ -141,7 +143,7 @@
           <p class="reviewStars">
             ★★★★★
           </p>
-          <p class="reviewText" style="font-family:Calibri, Verdana, sans-serif">
+          <p class="reviewText" style="font-family: Playfair Display">
           Fantastic, I wouldn’t trust my cats with anyone else. Best groomer in Singapore and so convenient with pickup
           and drop off service! Thanks :)
           <br><br>
@@ -158,7 +160,7 @@
           <p class="reviewStars">
             ★★★★★
           </p>
-          <p class="reviewText" style="font-family:Calibri, Verdana, sans-serif">
+          <p class="reviewText" style="font-family: Playfair Display">
           First time to Fluff & Buff! Staff and groomer are very friendly. Both cats and dogs have their separate area
           for grooming!
           My dog is usually very feisty and afraid of strangers but she’s very comfortable with the groomer. Will
@@ -177,7 +179,7 @@
           <p class="reviewStars">
             ★★★★★
           </p>
-          <p class="reviewText" style="font-family:Calibri, Verdana, sans-serif">
+          <p class="reviewText" style="font-family: Playfair Display">
           Booking for an appointment was easy and fuss-free. The groomer is very patient with our pets.
           <br><br>
           <b>- Richard W.</b>
@@ -279,8 +281,8 @@
   </div>
   <div class="centerContainer">
     <div>
-      <button type="button" class="prev" onclick="prev()" style="border:none; background-color:white; color:#d4a7fc">&#129144</button>
-      <button type="button" class="next" onclick="next()" style="border:none; background-color:white; color:#d4a7fc">&#129146</button>
+      <button type="button" class="prev" onclick="prev()" style="border:none; background-color:white; color:#d4a7fc">&#129144;</button>
+      <button type="button" class="next" onclick="next()" style="border:none; background-color:white; color:#d4a7fc">&#129146;</button>
     </div>
   </div>
 
@@ -296,7 +298,7 @@
           <div id="footerLogoContainer" class="centerContainer">
             <img src="./Images/Logo.PNG" alt="Logo" id="footerLogo"><br>
           </div>
-          <p style="font-family:Calibri, Verdana, sans-serif">
+          <p style="font-family:Playfair Display">
                 7B Keppel Road #09-07 <br>
                 Tanjong Pagar Complex <br>
                 Singapore <br>
@@ -311,7 +313,7 @@
       </div>
       <div class="threeCol pinkBg centerContainer">
         <div class="inputContainer">
-          <h3 style="font-family:Calibri, Verdana, sans-serif"> Ask Us Anything</h3>
+          <h3 style="font-family: Playfair Display"> Ask Us Anything</h3>
           <div>
           <label for="contactEmail" class="contactLabel">Enter your Email:</label><br>
           <input type="text" class="contactInput" name="contactEmail" id="contactEmail"><br>
