--- a/shop.html
+++ b/shop.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FAQs</title>
+    <title>Shop</title>
     <link rel="icon" type="image/png" href="./Images/pet-care.png">
 
     <link rel="stylesheet" href="stylesheet.css">
@@ -46,14 +46,258 @@
         <div class="twoCol">
             <div class="shopContainer">
             <img src="Images/shop1.png" alt="Grooming essentials image" class="mainShoppic">
-            <shopNowbtn>Shop Now</shopNowbtn>
+            <div class="shopButtonContainer">
+              <button class="shopButton" type="button" style="width:150px; background-color: #ffb3b3; border: none" onclick="location.href='#groomingEssentials'">Shop now</button>
+            </div>
             </div>
         </div>
 
         <div class="twoCol">
             <div class="shopContainer">
             <img src="Images/shop2.png" alt="Toys image" class="mainShoppic">
-            <shopNowbtn>Shop Now</shopNowbtn>
+            <div class="shopButtonContainer">
+              <button class="shopButton" type="button" style="width:150px; background-color: #ffb3b3; border: none" onclick="location.href='#toys'">Shop now</button>
+            </div>
             </div>
         </div>
       </div>
+
+      <h1 class="header" id="groomingEssentials">Grooming Essentials</h1>
+
+      <div class="fourRow">
+        <div class="fourCol centerContainer">
+          <div class="whiteBg itemCard">
+            <div class="centerContainer">
+              <img class="itemPic" alt="Item Picture" src="./Images/shampoo7.jpg">
+            </div>
+            <p class="itemText">
+                YU Shampoo for Cats & Dogs - Skin Defense Formula (400ml) <br>
+                <b>S$27.90</b>
+            </p>
+            <div class="centerContainer">
+              <button type="button" style="width:150px">Add to Cart</button>
+            </div>
+          </div>
+        </div>
+        <div class="fourCol centerContainer">
+          <div class="whiteBg itemCard">
+            <div class="centerContainer">
+              <img class="itemPic" alt="Item Picture" src="./Images/shampoo1.jpg">
+            </div>
+            <p class="itemText">
+                YU Shampoo for Cats & Dogs - Skin Defense Formula (400ml) <br>
+                <b>S$27.90</b>
+            </p>
+            <div class="centerContainer">
+              <button type="button" style="width:150px">Add to Cart</button>
+            </div>
+          </div>
+        </div>
+        <div class="fourCol centerContainer">
+          <div class="whiteBg itemCard" style="width: 100%; height: 370px">
+            <div class="centerContainer">
+              <img class="itemPic" alt="Item Picture" src="./Images/shampoo2.jpg" style="width: 70%">
+            </div>
+            <p class="itemText" style="padding:10px">
+                Aesop Animal wash (500ml) <br>
+                <b>S$52.90</b>
+            </p>
+            <div class="centerContainer">
+              <button type="button" style="width:150px">Add to Cart</button>
+            </div>
+          </div>
+        </div>
+        <div class="fourCol centerContainer">
+          <div class="whiteBg itemCard">
+            <div class="centerContainer">
+              <img class="itemPic" alt="Item Picture" src="./Images/shampoo5.jpg" style="width: 70%">
+            </div>
+            <p class="itemText">
+                Epidermis Prime Essentials Deep Cleansing Pet Shampoo (250ml)  <br>
+                <b>S$29.90</b>
+            </p>
+            <div class="centerContainer">
+              <button type="button" style="width:150px">Add to Cart</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="fourRow">
+        <div class="fourCol centerContainer">
+          <div class="whiteBg itemCard"  style="width: 100%; height: 370px">
+            <div class="centerContainer">
+              <img class="itemPic" alt="Item Picture" src="./Images/shampoo6.jpg" style="width: 80%">
+            </div>
+            <p class="itemText" style="padding: 10px;">
+                WildWash- Pet Dog Shampoo (400ml) <br>
+                <b>S$27.90</b>
+            </p>
+            <div class="centerContainer">
+              <button type="button" style="width:150px">Add to Cart</button>
+            </div>
+          </div>
+        </div>
+        <div class="fourCol centerContainer">
+            <div class="whiteBg itemCard" style="width: 100%; height: 370px">
+              <div class="centerContainer">
+                <img class="itemPic" alt="Item Picture" src="./Images/shampoo8.png" style="width: 80%">
+              </div>
+              <p class="itemText">
+                WildWash- PRO Natural soothing Cat Shampoo (300ml) <br>
+                  <b>S$29.90</b>
+              </p>
+              <div class="centerContainer">
+                <button type="button" style="width:150px">Add to Cart</button>
+              </div>
+            </div>
+          </div>
+        <div class="fourCol centerContainer">
+          <div class="whiteBg itemCard">
+            <div class="centerContainer">
+              <img class="itemPic" alt="Item Picture" src="./Images/shampoo3.jpg">
+            </div>
+            <p class="itemText">
+                YU Deep cleansing/light conditioning furry cats formula (250ml)  <br>
+                <b>S$19.90</b>
+            </p>
+            <div class="centerContainer">
+              <button type="button" style="width:150px">Add to Cart</button>
+            </div>
+          </div>
+        </div>
+        <div class="fourCol centerContainer">
+          <div class="whiteBg itemCard">
+            <div class="centerContainer">
+              <img class="itemPic" alt="Item Picture" src="./Images/shampoo4.jpg" style="width: 80%">
+            </div>
+            <p class="itemText">
+                Easy-Clean & Softness For Lovely Cats formula mist(150ml)  <br>
+                <b>S$15.90</b>
+            </p>
+            <div class="centerContainer">
+              <button type="button" style="width:150px">Add to Cart</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <h1 class="header" id="toys">Pet Toys</h1>
+
+      <div class="fourRow">
+        <div class="fourCol centerContainer">
+          <div class="whiteBg itemCard">
+            <div class="centerContainer"> 
+              <img class="itemPic" alt="Item Picture" src="./Images/toy3.jpg" style="width: 80%">
+            </div>
+            <p class="itemText">
+                KONG- Wild Knots Bear Squeaky Chewable Soft Toy <br>
+                <b>S$21.90</b>
+            </p>
+            <div class="centerContainer">
+              <button type="button" style="width:150px">Add to Cart</button>
+            </div>
+          </div>
+        </div>
+        <div class="fourCol centerContainer">
+          <div class="whiteBg itemCard">
+            <div class="centerContainer">
+              <img class="itemPic" alt="Item Picture" src="./Images/toy4.jpg" style="width: 80%">
+            </div>
+            <p class="itemText">
+                KONG- GENIUS Interactive Feeding Chewable Dog Toy <br>
+                <b>S$22.90</b>
+            </p>
+            <div class="centerContainer">
+              <button type="button" style="width:150px">Add to Cart</button>
+            </div>
+          </div>
+        </div>
+        <div class="fourCol centerContainer">
+          <div class="whiteBg itemCard">
+            <div class="centerContainer">
+              <img class="itemPic" alt="Item Picture" src="./Images/toy7.jpg" style="width: 70%">
+            </div>
+            <p class="itemText">
+                KONG- Catnip detachable Infuser Plush Cat Toy with Catnip <br>
+                <b>S$27.90</b>
+            </p>
+            <div class="centerContainer">
+              <button type="button" style="width:150px">Add to Cart</button>
+            </div>
+          </div>
+        </div>
+        <div class="fourCol centerContainer">
+          <div class="whiteBg itemCard">
+            <div class="centerContainer">
+              <img class="itemPic" alt="Item Picture" src="./Images/toy6.jpg" style="width: 80%">
+            </div>
+            <p class="itemText">
+                KONG- Catnip Refillable detachable Hedgehod Plush Cat Toy <br>
+                <b>S$25.90</b>
+            </p>
+            <div class="centerContainer">
+              <button type="button" style="width:150px">Add to Cart</button>
+            </div>
+          </div>
+        </div>
+        <div class="fourCol centerContainer">
+            <div class="whiteBg itemCard">
+              <div class="centerContainer">
+                <img class="itemPic" alt="Item Picture" src="./Images/toy2.png" style="width: 80%">
+              </div>
+              <p class="itemText">
+                KONG- Wubba Classic Watermelon Fabric Squeaky Dog Toy <br>
+                  <b>S$19.90</b>
+              </p>
+              <div class="centerContainer">
+                <button type="button" style="width:150px">Add to Cart</button>
+              </div>
+            </div>
+          </div>
+          <div class="fourCol centerContainer">
+            <div class="whiteBg itemCard">
+              <div class="centerContainer">
+                <img class="itemPic" alt="Item Picture" src="./Images/toy8.jpg" style="width: 80%">
+              </div>
+              <p class="itemText">
+                KONG- Occasions Birthday Teddy Bear Soft Cat Toy  <br>
+                  <b>S$15.90</b>
+              </p>
+              <div class="centerContainer">
+                <button type="button" style="width:150px">Add to Cart</button>
+              </div>
+            </div>
+          </div>
+          <div class="fourCol centerContainer">
+            <div class="whiteBg itemCard">
+              <div class="centerContainer">
+                <img class="itemPic" alt="Item Picture" src="./Images/toy5.jpg" style="width: 80%">
+              </div>
+              <p class="itemText">
+                  KONG- Ultra Squeakair Bouncey Ball Dog Toy (set of 3)<br>
+                  <b>S$16.90</b>
+              </p>
+              <div class="centerContainer">
+                <button type="button" style="width:150px">Add to Cart</button>
+              </div>
+            </div>
+          </div>
+          <div class="fourCol centerContainer">
+            <div class="whiteBg itemCard">
+              <div class="centerContainer">
+                <img class="itemPic" alt="Item Picture" src="./Images/toy1.jpg" style="width: 80%">
+              </div>
+              <p class="itemText">
+                KONG Classic Interactive Chewable Dog Toy (RED)<br>
+                  <b>S$15.90</b>
+              </p>
+              <div class="centerContainer">
+                <button type="button" style="width:150px">Add to Cart</button>
+              </div>
+            </div>
+          </div>
+      </div>
+
+    </body>
+</html>
