html,js,css update

--- a/booking.html
+++ b/booking.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/png" href="./Images/pet-care.png">
 
     <link rel="stylesheet" href="stylesheet.css">
+    <link rel="script" href="script.js">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link href='https://fonts.googleapis.com/css?family=PlayfairDisplay' rel='stylesheet'>
 </head>
@@ -119,12 +120,7 @@
                 <div class="buttonContainer">
                     <button type="button" onclick="showSuccessMessage()" style="width:180px">Book</button>
                 </div>
-                <script>
-                    function showSuccessMessage() {
-                      alert("Booking is confirmed!");
-                    }
-                
-                </script>
+                <script src="script.js"></script>
             </div>
         </div>
     </div>
