--- a/checkout.html
+++ b/checkout.html
@@ -9,6 +9,7 @@
     <link rel="icon" type="image/png" href="./Images/pet-care.png">
 
     <link rel="stylesheet" href="stylesheet.css">
+    <link rel="script" href="script.js">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link href='https://fonts.googleapis.com/css?family=PlayfairDisplay' rel='stylesheet'>
 </head>
@@ -76,7 +77,7 @@
       <div class="cartRow">
         <div class="cartCol">
             <div class="cartContainer">
-                <img src="./Images/toy3.jpg" alt="Shampoo Image" class="cartPic" style="width: 40%;">
+                <img src="./Images/toy3.png" alt="Shampoo Image" class="cartPic" style="width: 40%;">
             </div>
         </div>
         <div class="cartCol cartContainer">
@@ -123,7 +124,7 @@
       <div class="fourRow">
         <div class="fourCol centerContainer">
           <div class="whiteBg itemCard">
-            <div class="centerContainer">
+            <div class="centerContainer zoom">
               <img class="itemPic" alt="Item Picture" src="./Images/shampoo7.jpg">
             </div>
             <p class="itemText">
@@ -137,7 +138,7 @@
         </div>
         <div class="fourCol centerContainer">
           <div class="whiteBg itemCard">
-            <div class="centerContainer">
+            <div class="centerContainer zoom">
               <img class="itemPic" alt="Item Picture" src="./Images/shampoo1.jpg">
             </div>
             <p class="itemText">
@@ -151,7 +152,7 @@
         </div>
         <div class="fourCol centerContainer">
           <div class="whiteBg itemCard">
-            <div class="centerContainer">
+            <div class="centerContainer zoom">
               <img class="itemPic" alt="Item Picture" src="./Images/toy7.jpg" style="width: 70%">
             </div>
             <p class="itemText">
@@ -165,7 +166,7 @@
         </div>
         <div class="fourCol centerContainer">
           <div class="whiteBg itemCard">
-            <div class="centerContainer">
+            <div class="centerContainer zoom">
               <img class="itemPic" alt="Item Picture" src="./Images/toy1.jpg" style="width: 80%">
             </div>
             <p class="itemText">
