--- a/shop.html
+++ b/shop.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/png" href="./Images/pet-care.png">
 
     <link rel="stylesheet" href="stylesheet.css">
+    <link rel="script" href="script.js">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link href='https://fonts.googleapis.com/css?family=PlayfairDisplay' rel='stylesheet'>
 </head>
@@ -67,7 +68,7 @@
       <div class="fourRow">
         <div class="fourCol centerContainer">
           <div class="whiteBg itemCard">
-            <div class="centerContainer">
+            <div class="centerContainer zoom" >
               <img class="itemPic" alt="Item Picture" src="./Images/shampoo7.jpg">
             </div>
             <p class="itemText">
@@ -81,7 +82,7 @@
         </div>
         <div class="fourCol centerContainer">
           <div class="whiteBg itemCard">
-            <div class="centerContainer">
+            <div class="centerContainer zoom">
               <img class="itemPic" alt="Item Picture" src="./Images/shampoo1.jpg">
             </div>
             <p class="itemText">
@@ -95,7 +96,7 @@
         </div>
         <div class="fourCol centerContainer">
           <div class="whiteBg itemCard" style="width: 100%; height: 370px">
-            <div class="centerContainer">
+            <div class="centerContainer zoom">
               <img class="itemPic" alt="Item Picture" src="./Images/shampoo2.jpg" style="width: 70%">
             </div>
             <p class="itemText" style="padding:10px">
@@ -109,12 +110,12 @@
         </div>
         <div class="fourCol centerContainer">
           <div class="whiteBg itemCard">
-            <div class="centerContainer">
-              <img class="itemPic" alt="Item Picture" src="./Images/shampoo5.jpg" style="width: 70%">
+            <div class="centerContainer zoom">
+              <img class="itemPic" alt="Item Picture" src="./Images/shampoo5.jpg" style="width: 80%;" >
             </div>
             <p class="itemText">
-                Epidermis Prime Essentials Deep Cleansing Pet Shampoo (250ml)  <br>
-                <b>S$29.90</b>
+                Melanie Newman Relax Dog Shampoo (500ml)  <br>
+                <b>S$39.90</b>
             </p>
             <div class="centerContainer">
               <button type="button" style="width:150px">Add to Cart</button>
@@ -126,7 +127,7 @@
       <div class="fourRow">
         <div class="fourCol centerContainer">
           <div class="whiteBg itemCard"  style="width: 100%; height: 370px">
-            <div class="centerContainer">
+            <div class="centerContainer zoom">
               <img class="itemPic" alt="Item Picture" src="./Images/shampoo6.jpg" style="width: 80%">
             </div>
             <p class="itemText" style="padding: 10px;">
@@ -140,7 +141,7 @@
         </div>
         <div class="fourCol centerContainer">
             <div class="whiteBg itemCard" style="width: 100%; height: 370px">
-              <div class="centerContainer">
+              <div class="centerContainer zoom">
                 <img class="itemPic" alt="Item Picture" src="./Images/shampoo8.png" style="width: 80%">
               </div>
               <p class="itemText">
@@ -154,8 +155,8 @@
           </div>
         <div class="fourCol centerContainer">
           <div class="whiteBg itemCard">
-            <div class="centerContainer">
-              <img class="itemPic" alt="Item Picture" src="./Images/shampoo3.jpg">
+            <div class="centerContainer zoom">
+              <img class="itemPic" alt="Item Picture" src="./Images/shampoo3.jpg" style="width: 50%">
             </div>
             <p class="itemText">
                 YU Deep cleansing/light conditioning furry cats formula (250ml)  <br>
@@ -168,7 +169,7 @@
         </div>
         <div class="fourCol centerContainer">
           <div class="whiteBg itemCard">
-            <div class="centerContainer">
+            <div class="centerContainer zoom">
               <img class="itemPic" alt="Item Picture" src="./Images/shampoo4.jpg" style="width: 80%">
             </div>
             <p class="itemText">
@@ -187,8 +188,8 @@
       <div class="fourRow">
         <div class="fourCol centerContainer">
           <div class="whiteBg itemCard">
-            <div class="centerContainer"> 
-              <img class="itemPic" alt="Item Picture" src="./Images/toy3.jpg" style="width: 80%">
+            <div class="centerContainer zoom"> 
+              <img class="itemPic" alt="Item Picture" src="./Images/toy3.png" style="width: 80%">
             </div>
             <p class="itemText">
                 KONG- Wild Knots Bear Squeaky Chewable Soft Toy <br>
@@ -201,8 +202,8 @@
         </div>
         <div class="fourCol centerContainer">
           <div class="whiteBg itemCard">
-            <div class="centerContainer">
-              <img class="itemPic" alt="Item Picture" src="./Images/toy4.jpg" style="width: 80%">
+            <div class="centerContainer zoom">
+              <img class="itemPic" alt="Item Picture" src="./Images/toy4.png" style="width: 80%">
             </div>
             <p class="itemText">
                 KONG- GENIUS Interactive Feeding Chewable Dog Toy <br>
@@ -215,7 +216,7 @@
         </div>
         <div class="fourCol centerContainer">
           <div class="whiteBg itemCard">
-            <div class="centerContainer">
+            <div class="centerContainer zoom">
               <img class="itemPic" alt="Item Picture" src="./Images/toy7.jpg" style="width: 70%">
             </div>
             <p class="itemText">
@@ -229,7 +230,7 @@
         </div>
         <div class="fourCol centerContainer">
           <div class="whiteBg itemCard">
-            <div class="centerContainer">
+            <div class="centerContainer zoom">
               <img class="itemPic" alt="Item Picture" src="./Images/toy6.jpg" style="width: 80%">
             </div>
             <p class="itemText">
@@ -243,7 +244,7 @@
         </div>
         <div class="fourCol centerContainer">
             <div class="whiteBg itemCard">
-              <div class="centerContainer">
+              <div class="centerContainer zoom">
                 <img class="itemPic" alt="Item Picture" src="./Images/toy2.png" style="width: 80%">
               </div>
               <p class="itemText">
@@ -257,8 +258,8 @@
           </div>
           <div class="fourCol centerContainer">
             <div class="whiteBg itemCard">
-              <div class="centerContainer">
-                <img class="itemPic" alt="Item Picture" src="./Images/toy8.jpg" style="width: 80%">
+              <div class="centerContainer zoom">
+                <img class="itemPic" alt="Item Picture" src="./Images/toy8.png" style="width: 80%">
               </div>
               <p class="itemText">
                 KONG- Occasions Birthday Teddy Bear Soft Cat Toy  <br>
@@ -271,8 +272,8 @@
           </div>
           <div class="fourCol centerContainer">
             <div class="whiteBg itemCard">
-              <div class="centerContainer">
-                <img class="itemPic" alt="Item Picture" src="./Images/toy5.jpg" style="width: 80%">
+              <div class="centerContainer zoom">
+                <img class="itemPic" alt="Item Picture" src="./Images/toy5.png" style="width: 80%">
               </div>
               <p class="itemText">
                   KONG- Ultra Squeakair Bouncey Ball Dog Toy (set of 3)<br>
@@ -285,8 +286,8 @@
           </div>
           <div class="fourCol centerContainer">
             <div class="whiteBg itemCard">
-              <div class="centerContainer">
-                <img class="itemPic" alt="Item Picture" src="./Images/toy1.jpg" style="width: 80%">
+              <div class="centerContainer zoom">
+                <img class="itemPic" alt="Item Picture" src="./Images/toy1.jpg" style="width: 80%;">
               </div>
               <p class="itemText">
                 KONG Classic Interactive Chewable Dog Toy (RED)<br>
