--- a/FAQs.html
+++ b/FAQs.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/png" href="./Images/pet-care.png">
 
     <link rel="stylesheet" href="stylesheet.css">
+    <link rel="script" href="script.js">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link href='https://fonts.googleapis.com/css?family=PlayfairDisplay' rel='stylesheet'>
 </head>
@@ -117,9 +118,8 @@
                 </div>
             </div>
             </div>
-        </div>
+        </div> 
     </main>
-
     <script>
         var faq = document.getElementsByClassName("faqPage");
         var i;
